preliminary work prepping for first meet

--- a/_data/objectives.yml
+++ b/_data/objectives.yml
@@ -1,7 +1,8 @@
 # List your learning objectives here, one line per objective.
 # If you leave this blank, then it will say "none specified"- 
-- Learn how to use Apprentice
-- Update this in `_data/objectives.yml`
-- Here are some more fake ones
-- Microdosing occupy glossier
-- You need a little dummy text for your mockup
+- Understand what Git and GitHub are
+- Become familiar with the basic git commands
+- Understand git structure
+- Learn the GitHub services
+- Learn about external services
+- Understand how Git and GitHub can be used for your research
