--- a/_config.yml
+++ b/_config.yml
@@ -15,17 +15,14 @@
 # in the templates via {{ site.myvariable }}.
 
 
-title: Apprentice             # Name of the workshop
+title: Git and GitHub for Researchers             # Name of the workshop
 
 description: |
-  This tutorial will help you get your own Apprentice workshop up and running.
-  This tutorial, uses Apprentice so you will be changing this as  you work.
-  
-  Edit the *description:* field in `_config.yml`. This is where you can describe 
-  your workshop in markdown, or HTML or both. Replace this text with your own. 
-  The text here should be indented 2 space, don't use tabs. This can
-  be overridden in the `index.md` front matter using the *description:* field.
-
+  A workshop intended for reseachers who may be interested in using Git and GitHub
+  for aspects of their research workflow. This workshow is intened to get the
+  attendees more comfortable with these tools. Participants will get hands on 
+  time with the Git command line tool. They will also work with some of the 
+  services provided by GitHub.
 
 
 # Author information 
@@ -33,7 +30,7 @@ author:
     name: Robert Olendorf 
     # url:  http://example.com/
     company:
-        name: Penn State University
+        name: North Carolina State University.
         # url:  http://example.com/
         
 # Any value is ok, Beginner|Intermediate|Advanced are recommended, required 
@@ -55,12 +52,12 @@ line_numbers: true
 
 # the subpath of your site, e.g. /blog, for GitHub pages the name of the 
 # GitHub repository. Can be blank if you are not using Github pages
-baseurl: "/apprentice"
+baseurl: "/git_and_github_for_researchers"
 
 # This allows us to put supporting files in a different repositry if desired.
 # For now just hardcode the base url too, as its complicated with github.
 # This also lets external files be references.
-supporting_files_url: "https://github.com/user_name/repo_name/"
+supporting_files_url: "https://github.com/olendorf/git_and_github_for_researchers/"
 supporting_files_path: "blob/gh-pages/supporting_files/"
 
 # Where the bibliography data is comment out or set to blank to disable.
