--- a/_data/prereqs.yml
+++ b/_data/prereqs.yml
@@ -1,6 +1,4 @@
 # Add prerequesites here. Leaving them blank will result in None being
 # displayed
-- Update these in `_data/prereqs.yml`.
-- Familiarity with git and GitHub is helpful but not necessary
-- Familiarity with Markdown is helpful but not necessary
+- Familiarity with the Bash command line is helpful but not required
 # - Ability to uncomment these lines
